feat: extend TaxonomyService with new gbif check