@@ -1,7 +1,9 @@
 package com.digitowly.noctowl.service;
 
+import com.digitowly.noctowl.client.GbifClient;
 import com.digitowly.noctowl.client.WikimediaClient;
 import com.digitowly.noctowl.client.WikipediaClient;
+import com.digitowly.noctowl.model.dto.gbif.GbifSpeciesResponseDto;
 import com.digitowly.noctowl.model.wikidata.WikimediaPageDto;
 import com.digitowly.noctowl.model.wikidata.WikimediaPagesDto;
 import com.digitowly.noctowl.model.wikidata.WikipediaSummaryDto;
@@ -14,6 +16,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -23,6 +26,7 @@ class TaxonomyServiceTest {
     private TaxonomyService taxonomyService;
     private WikipediaClient wikipediaClient;
     private WikimediaClient wikimediaClient;
+    private GbifClient gbifClient;
     private WikidataTaxonChecker wikidataTaxonChecker;
 
     @BeforeEach
@@ -30,12 +34,14 @@ class TaxonomyServiceTest {
         this.wikipediaClient = mock(WikipediaClient.class);
         this.wikimediaClient = mock(WikimediaClient.class);
         this.wikidataTaxonChecker = mock(WikidataTaxonChecker.class);
+        this.gbifClient = mock(GbifClient.class);
         var taxonomyEntryRepository = mock(TaxonomyEntryRepository.class);
 
         this.taxonomyService = new TaxonomyService(
                 wikipediaClient,
                 wikimediaClient,
                 wikidataTaxonChecker,
+                gbifClient,
                 taxonomyEntryRepository,
                 new ObjectMapper()
         );
@@ -46,17 +52,40 @@ class TaxonomyServiceTest {
         String name = "Cat";
         String key = "Cat";
         String wikidataId = "Q146";
-        var pageDto = new WikimediaPageDto(1234, key, name,"", "A cat");
+        var pageDto = new WikimediaPageDto(
+                1234,
+                key,
+                name,
+                "Cat (Felis catus)",
+                "A cat"
+        );
         var pagesDto = new WikimediaPagesDto(List.of(pageDto));
         var summaryDto = new WikipediaSummaryDto(name, wikidataId);
+        var speciesResponseDto = new GbifSpeciesResponseDto(
+                new GbifSpeciesResponseDto.Usage(
+                        "7689",
+                        "Felis catus 1",
+                        "Felis catus"
+                ),
+                new GbifSpeciesResponseDto.Diagnostics(
+                        "EXACT",
+                        99
+                )
+        );
         when(wikimediaClient.getPages(name)).thenReturn(pagesDto);
         when(wikipediaClient.getSummary("Cat")).thenReturn(summaryDto);
         when(wikidataTaxonChecker.isTaxon(TaxonType.ANIMAL, wikidataId)).thenReturn(true);
+        when(gbifClient.getSpecies("Felis catus")).thenReturn(speciesResponseDto);
 
         var result = taxonomyService.find(TaxonType.ANIMAL, name, null);
         assertThat(result).isNotNull();
-        assertThat(result.type()).isEqualTo(TaxonType.ANIMAL);
-        assertThat(result.entries().get(0).wikipediaInfo().title()).isEqualTo(name);
-        assertThat(result.entries().get(0).wikipediaInfo().key()).isEqualTo(key);
+        assertEquals(TaxonType.ANIMAL, result.type());
+
+        // wikipedia
+        assertEquals(name, result.entries().getFirst().wikipedia().title());
+        assertEquals(key, result.entries().getFirst().wikipedia().key());
+
+        // gbif
+        assertEquals("7689", result.entries().getFirst().gbif().taxonKey());
     }
 }
